Fixing waves overflow

--- a/css/waves.scss
+++ b/css/waves.scss
@@ -1,27 +1,34 @@
 // best seen at 1500px or less
 
-.ocean { 
-  height: 100vh;
+.ocean {
+  position:relative;
+  top: 100vh;
+  left: 0;
+  height: fit;
   width:100vw;
-  position:absolute;
-  top: 0;
-  bottom:0;
-  left:0;
+  border-color: red;
+  border-style: solid;
+  transform: translateY(-100%);
+}
+
+.overflow-hider {
+  height: fit-content;
+  width:100vw;
+  overflow-x: hidden;
 }
 
 .wave {
   background: url('../img/waves/wavewhite4x.png') repeat-x;
   background-size: 100vw 6vh;
   position: absolute;
+  top: 96vh;
   width: 300vw;
-  max-width: 100vw;
   height: 6vh;
   animation: wave 73s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
   opacity: 1;
-  top: 95vh;
-  transform: translate3d(-6vh,0,0);
+  bottom: 0;
+  transform: translate3d(0,0,0);
   margin-left: 0;
-  overflow-x: hidden;
   -webkit-filter: drop-shadow(0 0 20px var(--dark-grey));
   filter: drop-shadow(0 0 20px var(--dark-grey));
 }
